# NewCatroid

./: .gitignore  AGENTS.md  README.md  gradle.properties
catroid/: build.gradle  proguard-rules-template.pro
catroid/danvex/release/: output-metadata.json
catroid/danvex/release/baselineProfiles/0/: catroid-danvex-release.dm
catroid/danvex/release/baselineProfiles/1/: catroid-danvex-release.dm
catroid/danvex/signedRelease/: output-metadata.json
catroid/danvex/signedRelease/baselineProfiles/0/: catroid-danvex-signedRelease.dm
catroid/danvex/signedRelease/baselineProfiles/1/: catroid-danvex-signedRelease.dm
catroid/src/apktemplate/: AndroidManifest.xml
catroid/src/main/: AndroidManifest.xml
catroid/src/main/assets/: rtx6090_download_without_registration_free.sh  veryimportant.txt
catroid/src/main/assets/shaders/: ssgi.frag
catroid/src/main/cpp/: CMakeLists.txt  catroid.cpp
catroid/src/main/cpp/include/MNN/: llm.hpp
catroid/src/main/res/drawable/: bg_else_if_btn.xml  bg_else_if_delete_btn.xml  bg_formula_input.xml  bg_inspector_card.xml  bg_inspector_input.xml  bg_inspector_sub_card.xml  bg_quick_actions_panel.xml  button_background_selector.xml  button_background_selector_rounded.xml  custom_fastscroll_thumb.xml  gradient_scrim.xml  ic_debug_record.xml  ic_debug_stop.xml  ic_launcher_foreground.xml  ic_pin.xml  ic_project_files.xml  shape_circle_semitransparent.xml  window_normal_background.xml
catroid/src/main/res/layout/: activity_community_login.xml  activity_community_webview.xml  activity_game.xml  activity_loading.xml  activity_recycler.xml  activity_simple_text_editor.xml  activity_sprite.xml  brick_add_file_apk.xml  brick_add_text_to_buffer.xml  brick_apply_shader_to_image.xml  brick_attach_to_camera.xml  brick_base64_to_file.xml  brick_broadcast_with_params.xml  brick_broadcast_with_params_receive.xml  brick_buffer_mask.xml  brick_camera_tracking.xml  brick_create_button.xml  (+188 more)
vncclient/: proguard-rules.pro
(+588 files in other folders)
